[package]
name = "retrocompressor"
version = "1.0.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "file compression with retro formats"
keywords = ["compress","retro","LZW","LZSS","Huffman"]
repository = "https://github.com/dfgordon/retrocompressor"
homepage = "https://github.com/dfgordon/retrocompressor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.11.3"
bit-vec = "0.6.3"
clap = {version="4.2.7",features=["cargo"]}
tempfile = "3.6.0"
predicates = "2.1.0"
assert_cmd = "2.0.2"
num-traits = "0.2.14"
num-derive = "0.3.3"
hex = "0.4.3"
thiserror = "1.0.30"
